--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
 <input type="password" placeholder="Password" name="password" required="">
 
 <button type="submit" class="register_button">Signin</button>
-<a href="register.html">Not registerd? Sign up tadoy?</a>
+<a href="register.html">Not registerd?</a>
 
 </form>
 <hr/>
