--- a/register.html
+++ b/register.html
@@ -46,14 +46,7 @@
 		<input type="password" placeholder="Confirm password" name="confirm_password" required="">
 
 		<button type="submit" class="register_button">Signup</button>
-<a href="login.html" style="font-size: 20px;
-	color: #ffffff;
-	text-decoration: none;
-	background-color: #0d47a1;
-	padding-left: 20px;
-	padding-right: 20px;
-	padding-top: 10px;
-	padding-bottom: 10px;">Already registered? Log in!?</a>
+<a href="login.html" style="">Already registered? Log in!?</a>
 
 </form>
 <hr/>
