--- a/register.html
+++ b/register.html
@@ -46,7 +46,7 @@
 		<input type="password" placeholder="Confirm password" name="confirm_password" required="">
 
 		<button type="submit" class="register_button">Signup</button>
-<a href="login.html" style="">Already registered? Log in!?</a>
+<a href="login.html">Already registered? Log in!?</a>
 
 </form>
 <hr/>
