--- a/login.html
+++ b/login.html
@@ -37,14 +37,16 @@
 <input type="password" placeholder="Password" name="password" required="">
 
 <button type="submit" class="register_button">Signin</button>
-<a href="register.html">Not registerd?</a>
+<a href="register.html">No registerd? Sign up taday?</a>
 
 </form>
 <hr/>
 <p style="font-size: 20px;">Or Login Using</p>
 <b style="background-color: #0d47a1; padding-right: 20px; padding-left: 20px; padding-top: 10px; padding-bottom: 10px;">Facebook</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <b style="background-color: #CC0000; padding-right: 20px; padding-left: 20px; padding-top: 10px; padding-bottom: 10px;">+ Google</b>
-<br/><br/><br/><br/><br/>
+<br/><br/>
+<hr/>
+<br/><br/><br/><br/>
 </div>
 
 
