--- a/register.html
+++ b/register.html
@@ -36,7 +36,7 @@
 		<input type="text" placeholder="Username" name="username" required="">
 
 	<label for="email"><b>Email</b></label>
-		<input type="text" placeholder="Username" name="username" required="">
+		<input type="text" placeholder="Email" name="Email" required="">
 
 
 		<label for="password"><b>Password</b></label>
