--- a/login.html
+++ b/login.html
@@ -7,20 +7,10 @@
 <body>
 
 <div class="top">
-	<a href="index.html">Home</a>
-	<a href="add_entry.html">Add Dairy</a>
+	<a href="index.html"><img src="img/dis.jpeg" width="80px" height="50px"></a>
 
 	<div class="top-right">
-		<div class="dropdown">
-			<button class="account">Account</button>
-				<div class="account-content">
-					<a href="profile.html">Profile</a>
-					<a href="update_entry.html">Update Entry</a>
-					<a href="add_entry.html">View Entry</a>
-					<a href="add_entry.html">Add Entry</a>
-					<a href="index.html">Logout</a>
-				</div>
-			</div>
+	
 		</div>
 	</div>
 </div>
@@ -29,7 +19,7 @@
 <div id="login">
 <h1>Login</h1>
 
-<form action="">
+<form action="account.html">
 <label for="email"><b>Email</b></label><br/>
 <input type="text" placeholder="Email" name="email" required="">
 
