--- a/register.html
+++ b/register.html
@@ -7,20 +7,10 @@
 <body>
 
 <div class="top">
-	<a href="index.html">Home</a>
-	<a href="add_entry.html">Add Dairy</a>
+	<a href="index.html"><img src="img/dis.jpeg" width="80px" height="50px"></a>
 
 	<div class="top-right">
-		<div class="dropdown">
-			<button class="account">Account</button>
-				<div class="account-content">
-					<a href="profile.html">Profile</a>
-					<a href="update_entry.html">Update Entry</a>
-					<a href="add_entry.html">View Entry</a>
-					<a href="add_entry.html">Add Entry</a>
-					<a href="index.html">Logout</a>
-				</div>
-			</div>
+	
 		</div>
 	</div>
 </div>
@@ -28,7 +18,7 @@
 
 <div id="register">
 		<h1>Create Account </h1>
-<form action="">
+<form action="login.html">
 		<label for="full_name"><b>Full names</b></label>
 		<input type="text" placeholder="Full name" name="full_name" required="">
 
