--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 <div class="homemusa">
 	<div class="homemusa-text">
-	<h1>Welcome To Andela Diary</h1>
+	
+ <div id="output"></div>
+
 	<p>Every Andelan can create a personal online diary, its free</p>
 		<a href="register.html">Register</a>
 		<a href="login.html">Login</a>
@@ -29,7 +31,6 @@
 <div class="footer">
   <p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
 </div>
-
 
 <script>
 	function myFunction(){
@@ -41,6 +42,12 @@
 	}
 	document.getElementById("demo").innerHTML = txt;
 }
+
+
+
+
 </script>
+<script type="js/index.js"></script>
+
 </body>
 </html>
