--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>My Dairy</title>
+	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
 
 <div class="homemusa">
 	<div class="homemusa-text">
-	
+
  <div id="output"></div>
 
 	<p>Every Andelan can create a personal online diary, its free</p>
@@ -27,6 +28,8 @@
 		<a href="login.html">Login</a>
 </div>
 </div>
+
+ <div id="output"></div>
 
 <div class="footer">
   <p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
