--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 	<title>My Dairy</title>
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
-<body>
+	<script src="script/homescript.js"></script>
+
+ <body onload="fetchIndex()">
 
 <div class="top">
 	<a href="index.html"><img src="img/dis.jpeg" width="80px" height="50px"></a>
@@ -29,28 +32,26 @@
 </div>
 </div>
 
- <div id="output"></div>
 
 <div class="footer">
   <p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
 </div>
 
+
 <script>
-	function myFunction(){
-		var txt;
-		if (confirm("Do you have an account?")){
-			 window.location = 'account.html';
-		}else{
-			 window.location = 'register.html';
-	}
-	document.getElementById("demo").innerHTML = txt;
-}
+// 	let route = "https://dairyapp.herokuapp.com/api/";
 
-
-
+// function fetchIndex(){
+// fetch(route+"/", {method:"GET", 
+// headers:{"Content-Type":"application/json"}})
+// .then((response) => response.json())
+// .then((data)=>{
+//     document.getElementById("output").innerHTML = data["message"]
+// })
+// .catch((err) => console.log(err))
+// }
 
 </script>
-<script type="js/index.js"></script>
 
 </body>
 </html>
