--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 	<script src="script/homescript.js"></script>
 
- <body onload="fetchIndex()">
+ <body onload="getText()">
 
 <div class="top">
 	<a href="index.html"><img src="img/dis.jpeg" width="80px" height="50px"></a>
@@ -24,7 +24,7 @@
 <div class="homemusa">
 	<div class="homemusa-text">
 
- <div id="output"></div>
+ <h2 id="output"></h2>
 
 	<p>Every Andelan can create a personal online diary, its free</p>
 		<a href="register.html">Register</a>
