--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 	<script src="script/homescript.js"></script>
 
- <body onload="getText()">
+ <body onload="fetchIndex()">
 
 <div class="top">
 	<a href="index.html"><img src="img/dis.jpeg" width="80px" height="50px"></a>
