--- a/login.html
+++ b/login.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>My Dairy</title>
+	<meta charset="utf-8"/>
+
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
