--- a/login.html
+++ b/login.html
@@ -20,15 +20,17 @@
 
 <div id="login">
 <h1>Login</h1>
+<p id="regstatus"></p>
+<form name="login" method="POST" id="regform" onsubmit="fetchlogin()">
 
-<form action="account.html">
-<label for="email"><b>Email</b></label><br/>
-<input type="text" placeholder="Email" name="email" required="">
+	<label for="username"><b>Username</b></label><br/>
+<input type="text" name="username" placeholder="Username"  />
 
 <label for="password"><b>password</b></label><br/>
-<input type="password" placeholder="Password" name="password" required="">
+<input type="password" name="password" placeholder="Password" />
 
-<button type="submit" class="register_button">Signin</button>
+<button name="submit" class="register_button">Signin</button>
+
 <a href="register.html">Not registerd?</a>
 
 </form>
@@ -39,6 +41,7 @@
 <div class="footer">
   <p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
 </div>
+<script src="script/homescript.js"></script>
 
 </body>
 </html>
