--- a/account.html
+++ b/account.html
@@ -15,7 +15,7 @@
 				<div class="account-content">
 					<a href="profile.html">Profile</a>
 					<a href="update_entry.html">Update Entry</a>
-					<a href="add_entry.html">View Entry</a>
+					<a href="view_entry.html">View Entry</a>
 					<a href="add_entry.html">Add Entry</a>
 					<a href="index.html">Logout</a>
 				</div>
@@ -119,6 +119,7 @@
 <div class="footer">
   <p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
 </div>
+<script src="script/homescript.js"></script>
 
 </body>
 </html>
