--- a/login.html
+++ b/login.html
@@ -29,8 +29,7 @@
 <label for="password"><b>password</b></label><br/>
 <input type="password" name="password" placeholder="Password" />
 
-<button type="submit" class="register_button">Signin</button>
-
+<input type="submit" value="Login">
 <a href="register.html">Not registerd?</a>
 
 </form>
