defined the token

--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
 <div class="footer">
   <p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
 </div>
-<script src="script/homescript.js"></script>
+<script src="script/login.js"></script>
 
 </body>
 </html>
