--- a/update_entry.html
+++ b/update_entry.html
@@ -24,129 +24,41 @@
 		</div>
 	</div>
 
-<th id = "total"></th>
+
+	<div id="book-update">
+		
+	
+	
+	</div>
 
 <div id="myModal" class="modal">
 	<div class="modal-content">
 	  <span class="close">&times;</span>
-	  <p class="modalText" id ="single"></p>
+
+	
 	  <div id="editor"></div>
+
 	</div>
 </div>
 
-<div class="totals">
-        
-	<table style="width:100%">
-		<tr>
-			<th id = "total"></th>
-			
-		</tr>
-	</table>
-</div>
 
-<div class="tableform" id="tableform">
-            
-</div>
-<div id="myModal" class="modal">
-		<div class="modal-content">
-		  <span class="close">&times;</span>
-		  <h5 class="modalText" id = "title"></h5><p class="modalText" id ="singleTitle"></p>
-		  <h5 class="modalText" id = "entry"></h5><p class="modalText" id ="single"></p>
-		  <div id="editor"></div>
-		</div>
-</div>
-
-
-
-<div id="output"></div>
-<div class="book-container">
-<div class="book2">
-<table>
-	<th>Title</th>
-	<th>Date</th>
-	<th></th>
-	<th></th>
-	<th></th>
-</table>
-</div>
-
-<div class="book-update">
-<table>
-	<tr>
-		<td>Code java</td>
-			<td>09/03/2018</td>
-
-		<div class="remove">
-		<td><button>Update</button></td>
-		<td><button>Delete</button></td>
-		</div>
-	
-	</tr>
-</table>
-</div>
-<div class="book-update">
-<table>
-	<tr>
-		<td>Meeting</td>
-			<td>08/29/2018</td>
-		<div class="remove">
-		<td><button>Update</button></td>
-		<td><button>Delete</button></td>
-		</div>
-	
-	</tr>
-</table>
-</div>
-<div class="book-update">
-<table>
-	<tr>
-		<td>Zoom Call</td>
-		<td>08/20/2018</td>
-		<div class="remove">
-		<td><button>Update</button></td>
-		<td><button>Delete</button></td>
-		</div>
-		
-
-	</tr>
-</table>
-</div>
-
-<div class="book-update">
-<table>
-	<tr>
-		<td>Code Django</td>
-			<td>08/23/2018</td>
-
-	<div class="remove">
-		<td><button>Update</button></td>
+<div id="myModal2" class="modal">
+	<!-- Modal content 2-->
+	<div class="modal-content2" id="popUp">
+	  <span class="close1">&times;</span>
+	  <div id="editForm"></div>
 	</div>
-	<div class="btndelete">
-		<td><button>Delete</button></td>
-	</div>
-	
-	</tr>
-</table>
-</div>
-<div class="book-update">
-<table>
-	<tr>
-		<td>Meeting</td>
-			<td>08/29/2018</td>
-		<div class="remove">
-		<td><button>Update</button></td>
-		<td><button>Delete</button></td>
-		</div>
-	
-	</tr>
-</table>
-</div>
-</div>
+  
+  </div>
+
+
+
 
 
 <div class="footer">
   <p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
 </div>
+<script src="script/document.js"></script>
 <script src="script/viewupdates.js"></script>
 
 </body>
