--- a/update_entry.html
+++ b/update_entry.html
@@ -30,26 +30,20 @@
 	
 	
 	</div>
+	
+
+
 
 <div id="myModal" class="modal">
 	<div class="modal-content">
-	  <span class="close">&times;</span>
-
-	
-	  <div id="editor"></div>
-
+		<span class="close">&times;</span>
+		<h5 class="modalText" id = "title"></h5><p class="modalText" id ="singleTitle"></p>
+		<h5 class="modalText" id = "dates"></h5><p class="modalText" id ="manydate"></p>
+		<h5 class="modalText" id = "entries"></h5><p class="modalText" id ="single"></p>
+		<div id="editor"></div>
 	</div>
 </div>
 
-
-<div id="myModal2" class="modal">
-	<!-- Modal content 2-->
-	<div class="modal-content2" id="popUp">
-	  <span class="close1">&times;</span>
-	  <div id="editForm"></div>
-	</div>
-  
-  </div>
 
 
 
