--- a/account.html
+++ b/account.html
@@ -17,7 +17,7 @@
 					<a href="update_entry.html">Update Entry</a>
 					<a href="view_entry.html">View Entry</a>
 					<a href="add_entry.html">Add Entry</a>
-					<a href="index.html">Logout</a>
+					<a href="login.html" id ="logout">Logout</a>
 				</div>
 			</div>
 		</div>
