update on fetch

--- a/add_entry.html
+++ b/add_entry.html
@@ -69,6 +69,8 @@
 	<div class="footer">
 	<p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
 	</div>
+
+	<script src="script/logout.js"></script>
 	<script src="script/entries_users.js"></script>
 	<script src="script/homescript.js"></script>
 
