--- a/update_entry.html
+++ b/update_entry.html
@@ -52,6 +52,7 @@
 <div class="footer">
   <p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
 </div>
+<script src="script/logout.js"></script>
 <script src="script/document.js"></script>
 <script src="script/viewupdates.js"></script>
 
