fetch user's details

--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body onload="Allentries();">
 
 <div class="top">
 	<a href="index.html"><img src="img/dis.jpeg" width="80px" height="50px"></a>
@@ -37,19 +37,7 @@
 	</div>
 
 	<div class="column1">
-	<div id="pro">
-	<p>wagole musa</p>
-	<hr/>
-	<p> refuge wise</p>
-		<hr/>
-
-	<p>homiemusa@gmail.com</p>
-		<hr/>
-
-	<p>*************</p>
-		<hr/><br/>
-<b>Update Account</b>
-<br/><br><br/></div>
+		<div id="user"></div>
 	<br/>
 	</div>
 
@@ -59,5 +47,7 @@
 <div class="footer">
   <p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
 </div>
+<script src="script/profile.js"></script>
+
 </body>
 </html>
