modify the files

--- a/profile.html
+++ b/profile.html
@@ -41,6 +41,18 @@
 	<br/>
 	</div>
 
+
+<div id="myModal" class="modal">
+	<div class="modal-content">
+		<span class="close">&times;</span>
+		<h5 class="modalText" id = "full_name"></h5><p class="modalText" id ="singleTitle"></p>
+		<h5 class="modalText" id = "username"></h5><p class="modalText" id ="manydate"></p>
+		<h5 class="modalText" id = "email"></h5><p class="modalText" id ="single"></p>
+		<div id="editor"></div>
+	</div>
+</div>
+
+
 	<br/>
 </div>
 <br/><br/>
@@ -48,6 +60,7 @@
   <p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
 </div>
 <script src="script/profile.js"></script>
+<script src="script/document.js"></script>
 
 </body>
 </html>
