modify the files

--- a/add_entry.html
+++ b/add_entry.html
@@ -30,13 +30,13 @@
 		<div id="allentries"></div>
 
 
-
+<br/>
 	<div class="book">
 	<table>
 		<tr>
-			<td>Presentation</td>
-			<td>08/13/2018</td>
-			<td>Niggah</td>
+			<td></td>
+			<td></td>
+			<td><a href="add_entry.html">Reload</a></td>
 			
 		</tr>
 	</table>
