--- a/add_entry.html
+++ b/add_entry.html
@@ -51,7 +51,7 @@
 		<h1>Create Diary</h1>
 		<p id="regstatus"></p>
 		
-	<form name="create" method="POST" onsubmit="fetchAddEntry()" id="regform"><b>Title</b>
+	<form name="create" method="POST" id="regform"><b>Title</b>
 	<input type="text" name="title" placeholder="Title" />
 	<br/>
 	<b>Date</b>
@@ -61,7 +61,7 @@
 
 	<b>Content Diary</b>
 	<textarea  name="entries" placeholder="Diary Content" required="" style="height: 200px; width: 590px;"></textarea><br/>
-	<button name"save" class="register_button">Save</button>
+	<button name"save" id="submit" class="register_button">Save</button>
 	</div>
 	</div>
 	</div>
