--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
 <div id="register">
 	<h2 id="reg"></h2>
 		<h1>Create Account </h1>
-<form name="register" method="POST" onsubmit="fetchUser()" id="regform">
+<form name="register" id="regform">
 
 <label for="full_name"><b>Full names</b></label>
 		<input type="text" name="full_name" placeholder="Full name">
@@ -42,7 +42,7 @@
 		<label for="confirm_password">Confirm Password</label>
 		<input type="password" name="confirm_password" placeholder="Confirm password">
 
-		<button name"submit" class="register_button">Signup</button>
+		<button id="submit" class="register_button">Signup</button>
 
 <a href="login.html">Already registered? Log in!?</a>
 
@@ -61,7 +61,7 @@
 <div class="footer">
   <p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
 </div>
-<script src="script/homescript.js"></script>
+<script src="script/register.js></script>
 
 </body>
 </html>
