modify register form

--- a/register.html
+++ b/register.html
@@ -42,7 +42,7 @@
 		<label for="confirm_password">Confirm Password</label>
 		<input type="password" name="confirm_password" placeholder="Confirm password">
 
-		<button id="submit" class="register_button">Signup</button>
+		<button name="submit" id="submit" class="register_button">Signup</button>
 
 <a href="login.html">Already registered? Log in!?</a>
 
@@ -61,6 +61,8 @@
 <div class="footer">
   <p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
 </div>
+<script src="script/homescript.js"></script>
+
 <script src="script/register.js></script>
 
 </body>
