--- a/index.html
+++ b/index.html
@@ -1,39 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Dairy</title>
-	<meta charset="utf-8"/>
+	<title>SendIT</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-
 </head>
-	<script src="script/homescript.js"></script>
-
- <body onload="fetchIndex()">
-
+<body>
 <div class="top">
-	<a href="index.html"><img src="img/dis.jpeg" width="80px" height="50px"></a>
+<img src="img/delivery.png">
+  <a href="admin_login.html">Admin</a>
+  <a href="login.html">Login</a>
+
+   <a href="register.html">Register</a>  
+      <a href="index.html">Home</a>  
 
 
+  </div> 
+  </body>
+    <div class="new_delivery">
 
-		</div>
-	</div>
+   <h2>SendIT</h2>
+   <p>This is one of popular courier services</p>
+   <p>We deliver parcels to different destinations, as fast as possible</p>
+      <a href="register.html">Signup & send Your Parcel Now</a>  
 </div>
-
-<div class="homemusa">
-	<div class="homemusa-text">
-
- <h1 id="output"></h1>
-
-	<p>Every Andelan can create a personal online diary, its free</p>
-		<a href="register.html">Register</a>
-		<a href="login.html">Login</a>
-</div>
-</div>
-
-
-<div class="footer">
-  <p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
-</div>
-
+<iframe src="https://www.google.com/maps/d/embed?mid=1OuXI5fmsHUdCNT4j2QMapfT5tELUAklj" width="1300" height="570"></iframe>
 </body>
-</html>
+</html> 
