--- a/login.html
+++ b/login.html
@@ -1,47 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Dairy</title>
-	<meta charset="utf-8"/>
-
+	<title>SendIT</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
 <div class="top">
-	<a href="index.html"><img src="img/dis.jpeg" width="80px" height="50px"></a>
+<img src="img/delivery.png">
+  <a href="login.html">Login</a>
+  <a href="register.html">Register</a>
+   <a href="index.html">Home</a>  
 
-	<div class="top-right">
-	
-		</div>
-	</div>
-</div>
+  </div> 
 
 
-<div id="login">
-<h1>Login</h1>
-<p id="regstatus"></p>
-<form name="login"  id="regform">
+<h2 style="text-align: center; font-size: 25px;">Login</h2>
+<input type='checkbox' id='form-switch'>
 
-	<label for="username"><b>Username</b></label><br/>
-<input type="text" name="username" placeholder="Username"  />
-
-<label for="password"><b>password</b></label><br/>
-<input type="password" name="password" placeholder="Password" />
-
-<button name="submit" id="submit" class="register_button">Signin</button>
-
-<a href="register.html">Not registerd?</a>
-
+<form id='login-form' action="dashboard.html" method='post'>
+  <input type="text" placeholder="Username" required>
+  <input type="password" placeholder="Password" required>
+  <button type='submit'>Login</button>
+  <label for='form-switch' style="color: #0099CC; padding-left: 50px;"><span>Forget Password</span></label><br/><br/>
+    <a href="register.html">Don't have account? Sigup</a>
 </form>
-<br/><br/><br/><br/><br/>
-</div>
-
-
-<div class="footer">
-  <p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
-</div>
-<script src="script/login.js"></script>
-
+<form id='register-form' action="" method='post'>
+  <input type="email" placeholder="Email" required>
+  <button type='submit'>Send</button>
+ 
+</form>
 </body>
-</html>
+</html> 
