--- a/profile.html
+++ b/profile.html
@@ -1,66 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Dairy</title>
-	<meta charset="utf-8"/>
-
+	<title>SendIT</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body onload="Allentries();">
-
+<body>
 <div class="top">
-	<a href="index.html"><img src="img/dis.jpeg" width="80px" height="50px"></a>
+<img src="img/delivery.png">
+ <div class="dropdown">
+    <button class="dropbtn">Delivery Order Menu
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="new_delivery.html">New Delivery</a>
+      <a href="profile.html">Profile</a>
+      <a href="my_order.html">My Orders</a>
+      <a href="history-delivery.html">History Deliverd</a>
+      <hr/>
+			<a href="index.html">Logout</a>
+    </div>
 
-	<div class="top-right">
-		<div class="dropdown">
-			<button class="account">Account</button>
-				<div class="account-content">
-					<a href="profile.html">Profile</a>
-					<a href="update_entry.html">Update Entry</a>
-					<a href="add_entry.html">View Entry</a>
-					<a href="add_entry.html">Add Entry</a>
-					<a href="index.html">Logout</a>
-				</div>
-			</div>
-		</div>
-	</div>
+  </div>
+  <a href="#contact">Hello: Refuge Wise</a>
+
+  </div>
+
+  <div class="card">
+  <img src="img/jj.jpg" alt="John" style="width:100%">
+  <h3>Refuge wise</h3>
+  <p>Wagole musa</p>
+  <p>Homiemusa@gmail.com</p>
+  <p>Kisumu</p>
+  <p>+254 725 69 60 42</p>
+
+  <p><button id="myBtn">Change</button></p>
 </div>
-
-
-<div class="row1">
-	<div class="column1">
-	 <img src="img/mm.JPG" alt="" width="500" height="350"><br/>
-	 <br/>
-	 <center>
-	 <b style="font-size: 24px;">Change Photo</b>
-	 </center>
-	</div>
-
-	<div class="column1">
-		<div id="user"></div>
-	<br/>
-	</div>
 
 
 <div id="myModal" class="modal">
-	<div class="modal-content">
-		<span class="close">&times;</span>
-		<h5 class="modalText" id = "full_name"></h5><p class="modalText" id ="singleTitle"></p>
-		<h5 class="modalText" id = "username"></h5><p class="modalText" id ="manydate"></p>
-		<h5 class="modalText" id = "email"></h5><p class="modalText" id ="single"></p>
-		<div id="editor"></div>
-	</div>
-</div>
 
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+          <h1 style="text-align: center; font-size: 25px;">Change profile</h1>
 
-	<br/>
+<form id='register' action="" method='post'>
+  <input type="text" name="firtname" placeholder="Firstname" required>
+  <input type="text" name="lastname" placeholder="Lastname" required>
+  <input type="text" name="username" placeholder="Username" required>
+  <input type="number" name="phone" placeholder="Phone Number" required>
+  <input type="text" name="country" placeholder="country " required>
+  <input type="email" name="email" placeholder="Email" required>
+      <button type='submit'>Change</button>
+    </form>
+<br/>
+  </div>
+
 </div>
-<br/><br/>
-<div class="footer">
-  <p>@copyright  &nbsp;  by &nbsp; <a href="https://github.com/wagolemusa">refuge wise</a> </p>
-</div>
-<script src="script/profile.js"></script>
-<script src="script/document.js"></script>
+<script src="js/script.js"></script>
+
 
 </body>
-</html>
+</html> 
