--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
 </div>
 
 <h2 style="text-align: center; font-size: 25px;">Create Account</h2>
-<form id='register' action="login.html" method='post'>
+<form id='register' action="login.html">
   <input type="text" name="firtname" placeholder="Firstname" required>
   <input type="text" name="lastname" placeholder="Lastname" required>
   <input type="text" name="username" placeholder="Username" required>
