--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 <h2 style="text-align: center; font-size: 25px;">Login</h2>
 <input type='checkbox' id='form-switch'>
 
-<form id='login-form' action="dashboard.html">
+<form action="dashboard.html">
   <input type="text" placeholder="Username" required>
   <input type="password" placeholder="Password" required>
   <button type='submit'>Login</button>
