--- a/delivery_orders.html
+++ b/delivery_orders.html
@@ -102,7 +102,7 @@
     <span class="close">&times;</span>
           <h1 style="text-align: center; font-size: 25px;">Change Orders</h1>
 
-    <form id='delivery_orders.html' action="" method='post'>
+    <form  action="delivery_orders.html">
       <input type="text" placeholder="Nairobi" required>
       <input type="text" placeholder="Kisumu" required>
       <button type='submit'>Change</button>
