--- a/my_order.html
+++ b/my_order.html
@@ -106,7 +106,7 @@
     <span class="close">&times;</span>
           <h1>Update Orders</h1>
 
-    <form id='post' action="" method='post'>
+    <form action="my_order.html">
       <input type="text" placeholder="Nairobi" required>
       <input type="text" placeholder="Kisumu" required>
       <button type='submit'>Update</button>
