--- a/new_delivery.html
+++ b/new_delivery.html
@@ -30,7 +30,7 @@
 <div class="contianer">
   <div class="new_delivery">
     <h1>New Deliverd Orders</h1>
-    <form id='post' action="" method='post'>
+    <form action="new_delivery.html">
       <input type="text" placeholder="From......" required>
       <input type="text" placeholder="To........" required>
       <input type="number" placeholder="Weight" required>
