--- a/profile.html
+++ b/profile.html
@@ -44,7 +44,7 @@
     <span class="close">&times;</span>
           <h1 style="text-align: center; font-size: 25px;">Change profile</h1>
 
-<form id='register' action="" method='post'>
+<form action="profile.html">
   <input type="text" name="firtname" placeholder="Firstname" required>
   <input type="text" name="lastname" placeholder="Lastname" required>
   <input type="text" name="username" placeholder="Username" required>
