--- a/admin_login.html
+++ b/admin_login.html
@@ -12,7 +12,7 @@
   </div> 
   <h2 style="text-align: center; font-size: 25px;"> Admin Login</h2>
 <input type='checkbox' id='form-switch'>
-<form id='login-form' action="admin_dashboard.html" method='post'>
+<form action="admin_dashboard.html">
   <input type="text" placeholder="Username" required>
   <input type="password" placeholder="Password" required>
   <button type='submit'>Login</button>
