--- a/create_price.html
+++ b/create_price.html
@@ -102,7 +102,7 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <h1>Create Delivery Prices</h1>
-    <form id='create_price.html' action="" method='post'>
+    <form  action="create_price.html">
       <input type="text" placeholder="From......" required>
       <input type="text" placeholder="To........" required>
       <input type="number" placeholder="price" required>
