--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -30,9 +30,8 @@
 </div>
 
 <div class="main">
-  <h2>SendIT</h2>
-
- 
+<h3 style="color: #999;
+">Admin Dashboard</h3> 
   <div class="row">
     <div class="col-md-4">
       <div class="color-block">
