--- a/create_price.html
+++ b/create_price.html
@@ -30,7 +30,7 @@
       
 <td><button style="color: #ffffff; background-color:#00C851; font-size: 18px; width: 10em;  border: none;
 " id="myBtn">Create Price</button></td>
-<h1>Parcel price</h1> 
+<h1>Parcel prices</h1> 
 
    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search by Dates..">
 
