--- a/history_orders.html
+++ b/history_orders.html
@@ -12,7 +12,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="profile.html">Profile</a>
+      <a href="#">Profile</a>
     
       <hr/>
       <a href="index.html">Logout</a>
@@ -25,7 +25,7 @@
 
 
 <div class="contianer">
-<h1>History Deliveries Orders</h1>
+<h1>Delivery History Orders</h1>
 
    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search by Dates..">
 
