--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="new_delivery">
 
    <h2>SendIT</h2>
-   <p>This is one of popular courier services</p>
-   <p>We deliver parcels to different destinations, as fast as possible</p>
-      <a href="register.html">Signup & send Your Parcel Now</a>  
+   <p>Is one of the popular courier services</p>
+   <p>We deliver parcels in different destinations, as fast as possible</p>
+      <a href="register.html">Signup & send Your Parcels Now</a>  
 </div>
 <iframe src="https://www.google.com/maps/d/embed?mid=1OuXI5fmsHUdCNT4j2QMapfT5tELUAklj" width="1300" height="570"></iframe>
 </body>
