--- a/my_order.html
+++ b/my_order.html
@@ -16,7 +16,7 @@
       <a href="new_delivery.html">New Delivery</a>
       <a href="profile.html">Profile</a>
       <a href="my_order.html">My Orders</a>
-      <a href="history-delivery.html">History Deliverd</a>
+      <a href="history-delivery.html">Orders History</a>
       <hr/>
 			<a href="index.html">Logout</a>
     </div>
