--- a/register.html
+++ b/register.html
@@ -12,6 +12,7 @@
           <a href="index.html">Home</a>  
 
 </div>
+<div class="outer">
 
 <h2 style="text-align: center; font-size: 25px;">Create Account</h2>
 <form action="login.html">
@@ -24,10 +25,11 @@
   <input type="password" name="password" placeholder="Password" required>
   <input type="password" name="confirm-password" placeholder="Re Password" required>
   <button type='submit'>Register</button>
-  <a href="login.html">Already Member ? Sign In Now..</a>
+  <a href="login.html">Already a member ? Sign In..</a>
     <br/>
   <br/>
 
 </form>
+</div>
 </body>
 </html> 
