--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -23,10 +23,10 @@
 <br/>
 
  <div class="sidenav">
-  <a href="create_price.html">Create Price</a><br/>
+  <a href="create_price.html">Create Prices</a><br/>
   <a href="all_users.html">All Users</a><br/>
   <a href="delivery_orders.html">Delivery Orders</a><br/>
-  <a href="history_orders.html">History Orders</a><br/>
+  <a href="history_orders.html">Orders History</a><br/>
 </div>
 
 <div class="main">
