--- a/admin_login.html
+++ b/admin_login.html
@@ -10,6 +10,9 @@
   <a href="login.html">Login</a>
   <a href="register.html">Register</a>
   </div> 
+
+  <div class="outer">
+
   <h2 style="text-align: center; font-size: 25px;"> Admin Login</h2>
 <input type='checkbox' id='form-switch'>
 <form action="admin_dashboard.html">
@@ -17,5 +20,6 @@
   <input type="password" placeholder="Password" required>
   <button type='submit'>Login</button>
 </form>
+</div>
 </body>
 </html> 
