--- a/history-delivery.html
+++ b/history-delivery.html
@@ -15,7 +15,7 @@
       <a href="new_delivery.html">New Delivery</a>
       <a href="#">Profile</a>
       <a href="my_order.html">My Orders</a>
-      <a href="history-delivery.html">History Deliverd</a>
+      <a href="history-delivery.html">Orders History</a>
       <hr/>
 			<a href="index.html">Logout</a>
     </div>
