--- a/new_delivery.html
+++ b/new_delivery.html
@@ -15,7 +15,7 @@
       <a href="new_delivery.html">New Delivery</a>
       <a href="profile.html">Profile</a>
       <a href="my_order.html">My Orders</a>
-      <a href="history-delivery.html">History Deliverd</a>
+      <a href="history-delivery.html">Orders History</a>
       <hr/>
 			<a href="index.html">Logout</a>
     </div>
@@ -29,7 +29,7 @@
 
 <div class="contianer">
   <div class="new_delivery">
-    <h1>New Deliverd Orders</h1>
+    <h1>New Delivery Orders</h1>
     <form action="new_delivery.html">
       <input type="text" placeholder="From......" required>
       <input type="text" placeholder="To........" required>
