--- a/dashboard.html
+++ b/dashboard.html
@@ -26,7 +26,7 @@
   
 <div class="contianer">
   <div class="new_delivery">
-    <h1>New Deliverd Orders</h1>
+    <h1>New Delivery Orders</h1>
     <form id='post' action="" method='post'>
       <input type="text" placeholder="From......" required>
       <input type="text" placeholder="To........" required>
